--- a/Catalog.html
+++ b/Catalog.html
@@ -16,14 +16,32 @@
   <header class="main-header">
     <div class="main-header-bar">
       <div class="header-top">
-        <a href=""><img src="img/logo-technomart_s.svg" alt="Логотип «Техномарт»"></a>
+        <div class="header-logo"><a href=""><img src="img/logo-technomart_s.svg" alt="Логотип «Техномарт»"></a></div>
         <form action="#" method="get" enctype="multipart/form-data">
+          <label class="search-label" for="search">
+            <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z" fill="white"/>
+            </svg>
+          </label>
           <input type="search" name="search" id="search" placeholder="Поиск:">
-          <label class="search-label" for="search"></label>
         </form>
-         <a class="bookmarks" href="">Закладки:</a>
-         <a  class="basket" href="">Корзина:</a>
-         <a  class="order" href="">Оформить заказ</a>
+        <ul class="top-menue">
+          <li>
+            <svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M14 15C14 15.55 13.632 15.741 13.182 15.426L7.819 11.661C7.369 11.346 6.632 11.346 6.182 11.661L0.818 15.426C0.368 15.741 0 15.55 0 15V1C0 0.45 0.45 0 1 0H13C13.55 0 14 0.45 14 1V15Z" fill="white"/>
+            </svg>
+            <a class="bookmarks" href="">Закладки: 0</a>
+          </li>
+          <li>
+            <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="white"/>
+              <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="white"/>
+              <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="white"/>
+              </svg>
+            <a class="basket" href="">Корзина: 0</a>
+          </li>
+          <li><a class="order" href="">Оформить заказ</a>
+        </ul>
       </div>
     </div>
       <div class="header-for-user">
@@ -38,9 +56,9 @@
             <path d="M17.881 14.166C15.737 13.431 13.625 12.5 12.674 11.776C12.017 11.275 11.904 10.158 12.157 9.361C13.275 8.458 14.021 6.884 14.021 5.083C14.021 2.276 12.221 0 10 0C7.77902 0 5.97901 2.276 5.97901 5.083C5.97901 6.884 6.72501 8.457 7.84201 9.36C8.09501 10.158 7.98302 11.275 7.32502 11.776C6.37502 12.5 4.26201 13.43 2.11801 14.166C-0.0259852 14.902 1.48343e-05 18 1.48343e-05 18H20C20 18 20.025 14.901 17.881 14.166Z" fill="#C5C5C5"/>
             </svg>
             Равшан Джамшутович
-            <svg width="21" height="17" viewBox="0 0 21 17"  xmlns="http://www.w3.org/2000/svg">
-              <path d="M14.875 8.5L6 0V6H0V11H6V17L14.875 8.5Z" fill="#C5C5C5"/>
-              <path d="M16.986 15.01H11.959V17H16.986C19.164 17 19.99 15.19 20.015 13.974V3.028C19.99 1.811 19.164 0 16.986 0H11.959V1.99H16.986C17.825 1.99 17.978 2.671 17.996 3.047V13.951C17.979 14.327 17.825 15.01 16.986 15.01Z" fill="#C5C5C5"/>
+            <svg width="20" height="17" viewBox="0 0 20 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M20 8.5L11.125 0V6H5.125V11H11.125V17L20 8.5Z" fill="#C5C5C5"/>
+              <path d="M2.10591 13.952V3.048C2.12391 2.672 2.27691 1.991 3.11591 1.991H8.14291V0H3.11591C0.937914 0 0.111914 1.81 0.0869141 3.027V13.973C0.111914 15.189 0.937914 17 3.11591 17H8.14291V15.01H3.11591C2.27691 15.01 2.12391 14.327 2.10591 13.952Z" fill="#C5C5C5"/>
               </svg>
           </a>
           <div class="other-links">
@@ -66,7 +84,12 @@
   <div class="container">
   <section class="catalog">
     <div class="breadcrumbs">
-       <a href="index.html"></a>
+       <a href="index.html">
+         <svg width="14" height="12" viewBox="0 0 14 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M2 7.99999V12H6V7.99999H8V12H12V7.99999L7 3.51599L2 7.99999Z" fill="#C1C6CE"/>
+        <path d="M13.8311 6.365L12.0001 4.751V0H10.0001V2.987L7.3321 0.635C7.3121 0.618 7.2891 0.612 7.2681 0.598C7.24306 0.579705 7.21626 0.56396 7.1881 0.551C7.15721 0.540195 7.12541 0.532163 7.0931 0.527C7.0621 0.521 7.0321 0.515 7.0001 0.515C6.9691 0.515 6.9391 0.521 6.9081 0.527C6.87563 0.531919 6.84378 0.5403 6.8131 0.552C6.7851 0.563 6.7601 0.581 6.7331 0.598C6.7121 0.612 6.6881 0.618 6.6691 0.635L0.171098 6.365C0.0163621 6.50291 -0.0374732 6.72187 0.0356695 6.9158C0.108812 7.10974 0.293829 7.23862 0.501098 7.24C0.623029 7.24035 0.740833 7.19586 0.832098 7.115L7.0001 1.677L13.1691 7.115C13.3779 7.27913 13.6785 7.25178 13.8543 7.05265C14.0301 6.85352 14.0199 6.55183 13.8311 6.365Z" fill="#C1C6CE"/>
+        </svg>
+      </a>
        <a href="">Каталог</a>
        <a  href="">Инструмент</a>
        <a href="">Перфораторы</a>
@@ -76,7 +99,7 @@
     </div>
     <form class="filters" action="#" method="get">
       <div class="filter">
-        <p>Фильтр</p>
+        <p>Фильтр:</p>
       </div>
       <fieldset class="filter-price">
         <legend>Цена:</legend>
@@ -87,12 +110,16 @@
             <div class="slider__finish-pin"></div>
           </div>
         </div>
-          <input type="number" min="0"/>
-          <input type="number" max="30000"/>
+          <div class="slider-value-wrraper">
+          <input type="number" min="0" value="0" class="slider-value"/>
+          <p>&mdash;</p>
+          <input type="number" max="30000" value="30000" class="slider-value"/>
+          </div>
+          <hr></hr>
       </fieldset>
       <fieldset class="filter-producer">
         <legend>Производители:</legend>
-        <ul>
+        <ul class="filter-producer-list">
           <li class="filter-option filter-checkbox">
             <input type="checkbox" name="BOSCH" id="filter-BOSCH" checked>
             <label for="filter-BOSCH">BOSCH</label>
@@ -114,10 +141,11 @@
             <label for="filter-Hitachi">Hitachi</label>
           </li>
         </ul>
+        <hr></hr>
       </fieldset>
       <fieldset class="filter-energy">
         <legend>Питание:</legend>
-        <ul>
+        <ul class="filter-energy-list">
           <li class="filter-option filter-radio">
             <input type="radio" name="energy-group" value="rechargeable" id="filter-rechargeable" checked>
             <label for="filter-rechargeable">Аккумуляторные</label>
@@ -131,9 +159,9 @@
       <button class="filter-button" type="submit">Показать</button>
     </form>
     <div class="catalog-section">
-      <fieldset class="filter">
+      <fieldset class="catalog-filter">
         <p>Сортировка:</p>
-        <ul>
+        <ul class="sorting">
          <li>
           <input type="radio" name="filter-group" value="price" id="filter-price" checked>
           <label for="filter-price">По цене</label>
@@ -182,7 +210,7 @@
         <li class="catalog-item">
           <p class="catalog-item-image"><img src="img/items/BFG_2000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 2000"></p>
           <p class="catalog-item-title">Перфоратор BOSCH BFG 2000</p>
-          <p class="catalog-item-price"></p>
+          <p class="catalog-item-price hidden" >0 Р.</p>
           <button class="catalog-item-button" type="button">12500 Р.</button>
         </li>
         <li class="catalog-item">
@@ -200,7 +228,7 @@
         <li class="catalog-item">
           <p class="catalog-item-image"><img src="img/items/BFG_2000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 2000"></p>
           <p class="catalog-item-title">Перфоратор BOSCH BFG 2000</p>
-          <p class="catalog-item-price"></p>
+          <p class="catalog-item-price hidden">0 Р.</p>
           <button class="catalog-item-button" type="button">12500 Р.</button>
         </li>
       </ul>
@@ -226,7 +254,7 @@
 <footer class="main-footer">
   <div class="footer-top-wrapper">
     <div class="footer-top">
-    <a href=""><img src="img/logo-technomart_m.svg" alt="Логотип «Техномарт»"></a>
+      <div class="footer-logo"><a href=""><img src="img/logo-technomart_m.svg" alt="Логотип «Техномарт»"></a></div>
     <nav class="footer-nav-main">
       <ul class="footer-nav-main">
         <li><a href="">Компания</a></li>
@@ -249,17 +277,21 @@
     </div>
   </div>
   <div class="footer-bottom-wrapper">
-    <div class="footer-bottom">
-    <p>© 2010–2019 Компания «Техномарт» <br> Все права защищены</p>
-    <p class="social-button-vk"><a href="https://vk.com/"></a></p>
-    <p class="social-button-fb"><a href="https://www.facebook.com/"></a></p>
-    <p class="social-button-inst"><a href="http://instagram.com/"></a></p>
-    <p>Обратная связь:</p>
-    <a  class="footer-contacts" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-    <p>Разработано —</p>
-    <a class="footer-contacts" href="htmlacademy.ru">htmlacademy.ru</a>
-    </div>
- </div>
+      <div class="footer-bottom">
+        <p>© 2010–2019 Компания «Техномарт» <br> Все права защищены</p>
+        <div class="social-button">
+          <p class="social-button-vk"><a href="https://vk.com/"><img src="img/icons/icon-vk.svg" width="24" height="14" alt="Вконтакте"></a></p>
+          <p class="social-button-fb"><a href="https://www.facebook.com/"><img src="img/icons/icon-fb.svg" width="12" height="22" alt="Фейсбук"></a></p>
+          <p class="social-button-inst"><a href="http://instagram.com/"><img src="img/icons/icon-insta.svg" width="21" height="21" alt="Инстаграм"></a></p>
+        </div>
+        <div class="info">
+         <p>Обратная связь: <br>
+          <a  class="footer-contacts" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+         <p>Разработано — <br>
+          <a class="footer-contacts" href="htmlacademy.ru">htmlacademy.ru</a></p>
+         </div>
+      </div>
+  </div>
 </footer>
 <section class="modal-add-product">
   <p>Товар добавлен в корзину!</p>
