--- a/index.html
+++ b/index.html
@@ -17,14 +17,32 @@
 <header class="main-header">
   <div class="main-header-bar">
     <div class="header-top">
-      <a href=""><img src="img/logo-technomart_s.svg" alt="Логотип «Техномарт»"></a>
+      <div class="header-logo"><a href=""><img src="img/logo-technomart_s.svg" alt="Логотип «Техномарт»"></a></div>
       <form action="#" method="get" enctype="multipart/form-data">
+        <label class="search-label" for="search">
+          <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z" fill="white"/>
+          </svg>
+        </label>
         <input type="search" name="search" id="search" placeholder="Поиск:">
-        <label class="search-label" for="search"></label>
       </form>
-       <a class="bookmarks" href="">Закладки:</a>
-       <a  class="basket" href="">Корзина:</a>
-       <a  class="order" href="">Оформить заказ</a>
+      <ul class="top-menue">
+       <li>
+         <svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M14 15C14 15.55 13.632 15.741 13.182 15.426L7.819 11.661C7.369 11.346 6.632 11.346 6.182 11.661L0.818 15.426C0.368 15.741 0 15.55 0 15V1C0 0.45 0.45 0 1 0H13C13.55 0 14 0.45 14 1V15Z" fill="white"/>
+          </svg>
+         <a class="bookmarks" href="">Закладки: 0</a>
+      </li>
+       <li>
+          <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="white"/>
+          <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="white"/>
+          <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="white"/>
+          </svg>
+         <a class="basket" href="">Корзина: 0</a>
+        </li>
+       <li><a class="order" href="">Оформить заказ</a></li>
+       </ul>
     </div>
   </div>
     <div class="header-for-user">
@@ -200,31 +218,32 @@
   <section class="about-company container">
     <div class="company">
       <h2>Компания «Техномарт»</h2>
-      <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для<br>
+      <p class="company-description">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для<br>
          ремонта и строительства не оставит равнодушными любителей сэкономить на<br>
-         гастарбайтерах.</p>
-      <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+         гастарбайтерах.<br>
+         <br>
+         Мы можем доставить ваш товар в самые отдаленные точки России!<br>
          Техномарт работает со многими транспортными компаниями:</p>
       <ul class="partners">
         <li><p class="bullet"></p>Деловые линии</li>
         <li><p class="bullet"></p>Автотрейдинг</li>
         <li><p class="bullet"></p>ЖелДорЭкспедиция</li>
       </ul>
-      <button class="main-button" type="button">подробнее о компании</button>
+      <button class="main-button partners-button" type="button">подробнее о компании</button>
     </div>
     <div class="contacts">
       <h2>Контакты</h2>
-      <p>Вы можете забрать товар сами, <br>
+      <p class="contacts-description"> Вы можете забрать товар сами, <br>
         заехав в наш офис:</p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1612269591425!5m2!1sru!2sru" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-        <button class="main-button" type="button">Заблудились? Напишите нам!</button>
+        <button class="main-button contacts-button" type="button">Заблудились? Напишите нам!</button>
     </div>
   </section>
 </main>
 <footer class="main-footer">
   <div class="footer-top-wrapper">
     <div class="footer-top">
-    <a href=""><img src="img/logo-technomart_m.svg" alt="Логотип «Техномарт»"></a>
+      <div class="footer-logo"><a href=""><img src="img/logo-technomart_m.svg" alt="Логотип «Техномарт»"></a></div>
     <nav class="footer-nav-main">
       <ul class="footer-nav-main">
         <li><a href="">Компания</a></li>
@@ -249,13 +268,17 @@
   <div class="footer-bottom-wrapper">
     <div class="footer-bottom">
     <p>© 2010–2019 Компания «Техномарт» <br> Все права защищены</p>
-    <p class="social-button-vk"><a href="https://vk.com/"></a></p>
-    <p class="social-button-fb"><a href="https://www.facebook.com/"></a></p>
-    <p class="social-button-inst"><a href="http://instagram.com/"></a></p>
-    <p>Обратная связь:</p>
-    <a  class="footer-contacts" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-    <p>Разработано —</p>
-    <a class="footer-contacts" href="htmlacademy.ru">htmlacademy.ru</a>
+    <div class="social-button">
+      <p class="social-button-vk"><a href="https://vk.com/"><img src="img/icons/icon-vk.svg" width="24" height="14" alt="Вконтакте"></a></p>
+      <p class="social-button-fb"><a href="https://www.facebook.com/"><img src="img/icons/icon-fb.svg" width="12" height="22" alt="Фейсбук"></a></p>
+      <p class="social-button-inst"><a href="http://instagram.com/"><img src="img/icons/icon-insta.svg" width="21" height="21" alt="Инстаграм"></a></p>
+    </div>
+    <div class="info">
+      <p>Обратная связь:<br>
+       <a  class="footer-contacts" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+      <p>Разработано — <br>
+       <a class="footer-contacts" href="htmlacademy.ru">htmlacademy.ru</a></p>
+      </div>
     </div>
  </div>
 </footer>
