--- a/Catalog.html
+++ b/Catalog.html
@@ -18,27 +18,25 @@
       <div class="header-top">
         <div class="header-logo"><a href=""><img src="img/logo-technomart_s.svg" alt="Логотип «Техномарт»"></a></div>
         <form action="#" method="get" enctype="multipart/form-data">
-          <label class="search-label" for="search">
-            <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z" fill="white"/>
-            </svg>
-          </label>
-          <input type="search" name="search" id="search" placeholder="Поиск:">
+          <input class="search-input" type="search" name="search" id="search" placeholder="Поиск:">
+          <label class="search-label" for="search"> </label>
         </form>
         <ul class="top-menue">
           <li>
-            <svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <a class="bookmarks" href="">
+              <svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M14 15C14 15.55 13.632 15.741 13.182 15.426L7.819 11.661C7.369 11.346 6.632 11.346 6.182 11.661L0.818 15.426C0.368 15.741 0 15.55 0 15V1C0 0.45 0.45 0 1 0H13C13.55 0 14 0.45 14 1V15Z" fill="white"/>
             </svg>
-            <a class="bookmarks" href="">Закладки: 0</a>
+              Закладки: 0</a>
           </li>
-          <li>
-            <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="white"/>
-              <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="white"/>
-              <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="white"/>
-              </svg>
-            <a class="basket" href="">Корзина: 0</a>
+          <li class="full-basket">
+            <a class="basket" href="">
+              <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="white"/>
+                <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="white"/>
+                <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="white"/>
+                </svg>
+              Корзина: 10</a>
           </li>
           <li><a class="order" href="">Оформить заказ</a>
         </ul>
@@ -111,9 +109,9 @@
           </div>
         </div>
           <div class="slider-value-wrraper">
-          <input type="number" min="0" value="0" class="slider-value"/>
+          <input type="text" min="0" value="0" class="slider-value"/>
           <p>&mdash;</p>
-          <input type="number" max="30000" value="30000" class="slider-value"/>
+          <input type="text" max="30000" value="30000" class="slider-value"/>
           </div>
           <hr>
       </fieldset>
@@ -121,23 +119,23 @@
         <legend>Производители:</legend>
         <ul class="filter-producer-list">
           <li class="filter-option filter-checkbox">
-            <input type="checkbox" name="BOSCH" id="filter-BOSCH" checked>
+            <input class="filter-input-checkbox" type="checkbox" name="BOSCH" id="filter-BOSCH" checked>
             <label for="filter-BOSCH">BOSCH</label>
           </li>
           <li class="filter-option filter-checkbox">
-            <input type="checkbox" name="interskol" id="filter-interskol">
+            <input class="filter-input-checkbox" type="checkbox" name="interskol" id="filter-interskol">
             <label for="filter-interskol">ИНТЕРСКОЛ</label>
           </li>
           <li class="filter-option filter-checkbox">
-            <input type="checkbox" name="MAKITA" id="filter-MAKITA" checked>
+            <input  class="filter-input-checkbox" type="checkbox" name="MAKITA" id="filter-MAKITA" checked >
             <label for="filter-MAKITA">MAKITA</label>
           </li>
           <li class="filter-option filter-checkbox">
-            <input type="checkbox" name="Dewalt" id="filter-Dewalt">
+            <input  class="filter-input-checkbox" type="checkbox" name="Dewalt" id="filter-Dewalt">
             <label for="filter-Dewalt">Dewalt</label>
           </li>
           <li class="filter-option filter-checkbox">
-            <input type="checkbox" name="Dewalt" id="filter-Hitachi">
+            <input class="filter-input-checkbox" type="checkbox" name="Dewalt" id="filter-Hitachi">
             <label for="filter-Hitachi">Hitachi</label>
           </li>
         </ul>
@@ -147,11 +145,11 @@
         <legend>Питание:</legend>
         <ul class="filter-energy-list">
           <li class="filter-option filter-radio">
-            <input type="radio" name="energy-group" value="rechargeable" id="filter-rechargeable" checked>
+            <input class="filter-input-radio" type="radio" name="energy-group" value="rechargeable" id="filter-rechargeable" checked >
             <label for="filter-rechargeable">Аккумуляторные</label>
           </li>
           <li class="filter-option filter-radio">
-            <input type="radio" name="energy-group" value="network" id="filter-network">
+            <input class="filter-input-radio" type="radio" name="energy-group" value="network" id="filter-network">
             <label for="filter-network">Сетевые</label>
           </li>
         </ul>
@@ -174,7 +172,17 @@
           <input type="radio" name="filter-group" value="function" id="filter-function">
           <label for="filter-function">По функционалу</label>
          </li>
-       </ul>
+        </ul>
+         <ul class="sorting-2">
+         <li>
+          <input type="radio" name="filter-group-2" value="sort" id="up" checked>
+          <label for="up"></label>
+         </li>
+         <li>
+          <input type="radio" name="filter-group-2" value="sort" id="down">
+          <label for="down"></label>
+         </li>
+        </ul>
       </fieldset>
       <ul class="catalog-list">
         <li class="catalog-item">
