--- a/index.html
+++ b/index.html
@@ -19,27 +19,21 @@
     <div class="header-top">
       <div class="header-logo"><a href=""><img src="img/logo-technomart_s.svg" alt="Логотип «Техномарт»"></a></div>
       <form action="#" method="get" enctype="multipart/form-data">
-        <label class="search-label" for="search">
-          <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z" fill="white"/>
-          </svg>
-        </label>
-        <input type="search" name="search" id="search" placeholder="Поиск:">
+        <input class="search-input" type="search" name="search" id="search" placeholder="Поиск:">
+        <label class="search-label" for="search"></label>
       </form>
       <ul class="top-menue">
        <li>
-         <svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+         <a class="bookmarks" href=""> <svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M14 15C14 15.55 13.632 15.741 13.182 15.426L7.819 11.661C7.369 11.346 6.632 11.346 6.182 11.661L0.818 15.426C0.368 15.741 0 15.55 0 15V1C0 0.45 0.45 0 1 0H13C13.55 0 14 0.45 14 1V15Z" fill="white"/>
-          </svg>
-         <a class="bookmarks" href="">Закладки: 0</a>
+          </svg> Закладки: 0</a>
       </li>
        <li>
-          <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+         <a class="basket" href=""> <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="white"/>
           <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="white"/>
           <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="white"/>
-          </svg>
-         <a class="basket" href="">Корзина: 0</a>
+          </svg> Корзина: 0</a>
         </li>
        <li><a class="order" href="">Оформить заказ</a></li>
        </ul>
@@ -78,15 +72,15 @@
   <section class="category">
     <div class="category-materials">
       <p>Материалы</p>
-      <button class="category-button" type="button">на любой вкус</button>
+      <a class="category-button" href="">на любой вкус</a>
      </div>
      <div class="category-tools">
       <p>Инструмент</p>
-      <button class="category-button" type="button">на все случаи</button>
+      <a class="category-button"href="">на все случаи</a>
      </div>
      <div class="category-technics">
       <p>Техника</p>
-      <button class="category-button" type="button">для стройки</button>
+      <a class="category-button" href="">для стройки</a>
      </div>
      <div class="category-items">
         <div class="category-slider">
@@ -115,14 +109,14 @@
      </div>
      <div class="category-sale">
       <p>Скидки 50%</p>
-      <button class="category-button" type="button">На 350 товаров</button>
+      <a class="category-button"href="">На 350 товаров</a>
      </div>
      <div class="category-delivery">
       <p>Доставка</p>
-      <button class="category-button" type="button">бесплатно</button>
+      <a class="category-button"href="">бесплатно</a>
      </div>
   </section>
-  <section class="popular">
+  <section class="popular popular-item">
     <div class="popular-header">
       <h2>Популярные товары:</h2>
       <button  class="main-button" type="button">Все популярные товары</button>
@@ -228,15 +222,15 @@
       <form>
         <ul class="features-list">
           <li class="feature-item">
-            <input type="radio" id="button-1" name="service-toggle" checked>
+            <input class="feature-item-input" type="radio" id="button-1" name="service-toggle" checked>
             <label for="button-1">Доставка</label>
           </li>
           <li class="feature-item">
-            <input type="radio" id="button-2" name="service-toggle">
+            <input class="feature-item-input" type="radio" id="button-2" name="service-toggle">
             <label for="button-2">Гарантия</label>
           </li>
           <li class="feature-item">
-            <input type="radio" id="button-3" name="service-toggle">
+            <input class="feature-item-input" type="radio" id="button-3" name="service-toggle">
             <label for="button-3">Кредит</label>
           </li>
          </ul>
@@ -262,6 +256,7 @@
           <h2>Кредит</h2>
           <p>Залезть в долговую яму стало проще!<br>
             Кредитные консультанты придут вам на помощь.</p>
+            <button class="main-button credit-button" type="button">ОТПРАВИТЬ ЗАЯВКУ</button>
         </div>
       </div>
     </div>
@@ -337,11 +332,11 @@
 <section class="modal-write-us">
   <form class="write-us-form" action="#" method="post">
     <label for="user-name">Ваше имя:</label>
-    <input type="text" name="name" id="user-name" placeholder="Имя Фамилия">
     <label for="user-email">Ваш e-mail:</label>
-    <input type="email" name="mail" id="user-email" placeholder="email@example.com">
     <label for="user-text">Текст письма:</label>
-    <input type="text" name="comment" id="user-text" placeholder="В свободной форме">
+    <input type="text" name="name" id="user-name" placeholder="Имя Фамилия">
+    <input type="email" name="mail" id="user-email" placeholder="email@example.com">
+    <textarea type="text" name="comment" id="user-text" rows="5" placeholder="В свободной форме"></textarea>
     <div class="form-bottom"><input type="submit" value="Отправить"></div>
   </form>
   <button class="modal-close" type="button"></button>
