--- a/Catalog.html
+++ b/Catalog.html
@@ -413,9 +413,10 @@
   <p>Товар добавлен в корзину!</p>
   <div class="form-bottom">
     <button  class="main-button" type="button">Оформить заказ</button>
-    <button  class="main-button" type="button">Продолжить покупки</button>
+    <button  class="main-button modal-btn" type="button">Продолжить покупки</button>
   </div>
   <button class="modal-close" type="button"></button>
 </section>
+<script src="js/script.js"></script>
 </body>
 </html>
