--- a/index.html
+++ b/index.html
@@ -223,20 +223,20 @@
         <ul class="features-list">
           <li class="feature-item">
             <input class="feature-item-input" type="radio" id="button-1" name="service-toggle" checked>
-            <label for="button-1">Доставка</label>
+            <label class="feature-btn" for="button-1" id="button-1">Доставка</label>
           </li>
           <li class="feature-item">
             <input class="feature-item-input" type="radio" id="button-2" name="service-toggle">
-            <label for="button-2">Гарантия</label>
+            <label class="feature-btn" for="button-2" id="button-2">Гарантия</label>
           </li>
           <li class="feature-item">
             <input class="feature-item-input" type="radio" id="button-3" name="service-toggle">
-            <label for="button-3">Кредит</label>
+            <label class="feature-btn" for="button-3" id="button-3">Кредит</label>
           </li>
          </ul>
       </form>
       <div class="other-description">
-        <div class="delivery">
+        <div class="delivery block-show">
           <h2>Доставка</h2>
           <p>Мы с удовольствием доставим ваш товар прямо<br>
             к вашему подъезду совершенно бесплатно!<br>
@@ -282,7 +282,7 @@
       <h2>Контакты</h2>
       <p class="contacts-description"> Вы можете забрать товар сами, <br>
         заехав в наш офис:</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1612269591425!5m2!1sru!2sru" width="600" height="450"  style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <iframe class="min-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1612269591425!5m2!1sru!2sru" width="600" height="450"  style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         <button class="main-button contacts-button" type="button">Заблудились? Напишите нам!</button>
     </div>
   </section>
@@ -342,8 +342,9 @@
   <button class="modal-close" type="button"></button>
 </section>
 <section  class="modal-modal-map">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1612269591425!5m2!1sru!2sru" width="600" height="450"  style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+  <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1612269591425!5m2!1sru!2sru" width="600" height="450"  style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
   <button class="modal-close" type="button"></button>
 </section>
+<script src="js/script.js"></script>
 </body>
 </html>
