--- a/Catalog.html
+++ b/Catalog.html
@@ -10,13 +10,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="css/Normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
 </head>
-<body class="page-body">
+<body class="page-body js-catalog">
   <header class="main-header">
     <div class="main-header-bar">
       <div class="header-top">
-        <div class="header-logo"><a href=""><img src="img/logo-technomart_s.svg" alt="Логотип «Техномарт»"></a></div>
+        <div class="header-logo"><a href="index.html"><img src="img/logo-technomart_s.svg" alt="Логотип «Техномарт»" width="107" height="17"></a></div>
         <form action="#" method="get" enctype="multipart/form-data">
           <input class="search-input" type="search" name="search" id="search" placeholder="Поиск:">
           <label class="search-label" for="search"> </label>
@@ -70,7 +70,7 @@
     <ul class="header-nav">
       <li><a href="index.html">Главная</a></li>
       <li><a href="">Компания</a></li>
-      <li><a href="Catalog.html">Каталог</a></li>
+      <li><a href="catalog.html">Каталог</a></li>
       <li><a href="">Новости</a></li>
       <li><a href="">Спецпредложения</a></li>
       <li><a href="">Доставка</a></li>
@@ -79,6 +79,7 @@
     </nav>
 </header>
 <main>
+  <h1 class="visually-hidden">Каталог товаров "ТЕХНОМАРТ"</h1>
   <div class="container">
   <section class="catalog">
     <div class="breadcrumbs">
@@ -95,7 +96,7 @@
     <div class="catalog-header">
       <h2>Перфораторы</h2>
     </div>
-    <form class="filters" action="#" method="get">
+    <form class="filters" action="https://echo.htmlacademy.ru/." method="get">
       <div class="filter">
         <p>Фильтр:</p>
       </div>
@@ -113,7 +114,7 @@
           <p>&mdash;</p>
           <input type="text"  value="30000" class="slider-value"/>
           </div>
-          <hr>
+          <hr class="line">
       </fieldset>
       <fieldset class="filter-producer">
         <legend>Производители:</legend>
@@ -139,7 +140,7 @@
             <label for="filter-Hitachi">Hitachi</label>
           </li>
         </ul>
-        <hr>
+        <hr class="line">
       </fieldset>
       <fieldset class="filter-energy">
         <legend>Питание:</legend>
@@ -161,25 +162,25 @@
         <p>Сортировка:</p>
         <ul class="sorting">
          <li>
-          <input type="radio" name="filter-group" value="price" id="filter-price" checked>
+          <input class="filter-price-input" type="radio" name="filter-group" value="price" id="filter-price" checked>
           <label for="filter-price">По цене</label>
          </li>
          <li>
-          <input type="radio" name="filter-group" value="type" id="filter-type" >
+          <input class="filter-type-input" type="radio" name="filter-group" value="type" id="filter-type" >
           <label for="filter-type">По типу</label>
          </li>
          <li>
-          <input type="radio" name="filter-group" value="function" id="filter-function">
+          <input class="filter-function-input" type="radio" name="filter-group" value="function" id="filter-function">
           <label for="filter-function">По функционалу</label>
          </li>
         </ul>
          <ul class="sorting-2">
          <li>
-          <input type="radio" name="filter-group-2" value="sort" id="up" checked>
+          <input class="up-input" type="radio" name="filter-group-2" value="sort" id="up" checked>
           <label for="up"></label>
          </li>
          <li>
-          <input type="radio" name="filter-group-2" value="sort" id="down">
+          <input class="down-input" type="radio" name="filter-group-2" value="sort" id="down">
           <label for="down"></label>
          </li>
         </ul>
@@ -194,7 +195,7 @@
               </svg> &nbsp; Купить</button>
             <button class="card-button2" type="button">В закладки</button>
             <img src="img/items/BFG_6000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 6000"></p>
-          <p class="catalog-item-title">Перфоратор BOSCH BFG 6000</p>
+          <p class="catalog-item-title">Перфоратор BOSCH BFG 6000 </p>
           <p class="catalog-item-price">30500 Р.</p>
           <button  class="catalog-item-button" type="button">25500 Р.</button>
         </li>
@@ -370,7 +371,7 @@
 <footer class="main-footer">
   <div class="footer-top-wrapper">
     <div class="footer-top">
-      <div class="footer-logo"><a href=""><img src="img/logo-technomart_m.svg" alt="Логотип «Техномарт»"></a></div>
+      <div class="footer-logo"><a href="index.html"><img src="img/logo-technomart_m.svg" alt="Логотип «Техномарт»" width="137" height="22"></a></div>
     <nav class="footer-nav-main">
       <ul class="footer-nav-main">
         <li><a href="">Компания</a></li>
@@ -404,7 +405,7 @@
          <p>Обратная связь: <br>
           <a  class="footer-contacts" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
          <p>Разработано — <br>
-          <a class="footer-contacts" href="htmlacademy.ru">htmlacademy.ru</a></p>
+          <a class="footer-contacts" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
          </div>
       </div>
   </div>
@@ -413,10 +414,10 @@
   <p>Товар добавлен в корзину!</p>
   <div class="form-bottom">
     <button  class="main-button" type="button">Оформить заказ</button>
-    <button  class="main-button modal-btn" type="button">Продолжить покупки</button>
+    <button  class="modal-btn" type="button">Продолжить покупки</button>
   </div>
   <button class="modal-close" type="button"></button>
 </section>
-<script src="js/script.js"></script>
+<script src="js/script.min.js"></script>
 </body>
 </html>
